# laser-cotizacion

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  atlas.hcl  docker-compose.yml  pyproject.toml
assets/: diagrama.dbml
assets/db/: customer.json  extra_option.json  order_status.json  product.json  type_client.json
backend/: .env  atlas.hcl
backend/db/data/: cotizacion.sql  extra_option.json  product.json  product_types.json
backend/db/migrations/: 20250715214533.sql  20250724180035.sql  atlas.sum
backend/src/: main.py
backend/src/application/dtos/: customer.py  extra_option.py  order.py  order_status.py  store.py  type_client.py
backend/src/services/: info_stores.py  pdf_generator.py
db/: diagrama.puml  fastapi-cotiza.ps1.txt
db/data/: Cotizacion.sql  customer.json  store.json
db/migrations/: 20250627170749.sql  20250701193840.sql  20250707210151.sql  atlas.sum
src/: main.py
src/application/: exceptions.py
src/application/dtos/: customer.py  extra_option.py  order.py  order_detail.py  pdf_generation.py  product.py  product_type.py  store.py
src/application/ports/: customer.py  order.py  order_detail.py  order_status.py  product.py  product_type.py  type_client.py
src/application/use_cases/: customer.py  order.py  order_detail.py  order_status.py  product_type.py  store.py  type_client.py
src/domain/models/: customer.py  extra_option.py  order.py  order_detail.py  order_status.py  product.py  product_type.py  type_client.py
src/infrastructure/database/: database.py
src/services/: pdf_generator.py  test.py
(+49 files in other folders)
